--- a/IsItUsed/en.lproj/MainMenu.xib
+++ b/IsItUsed/en.lproj/MainMenu.xib
@@ -700,7 +700,7 @@
 								<array class="NSMutableArray" key="NSSubviews"/>
 								<string key="NSFrame">{{0, 14}, {300, 22}}</string>
 								<reference key="NSSuperview"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<string key="NSHuggingPriority">{250, 750}</string>
 								<bool key="NSEnabled">YES</bool>
@@ -795,7 +795,7 @@
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{0, 14}, {72, 22}}</string>
 								<reference key="NSSuperview"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:1549</string>
 								<bool key="NSEnabled">YES</bool>
 								<object class="NSTextFieldCell" key="NSCell" id="492420091">
@@ -1002,7 +1002,7 @@
 												<string key="NSReuseIdentifierKey">_NS:19</string>
 											</object>
 											<array class="NSMutableArray" key="NSTableColumns">
-												<object class="NSTableColumn" id="470483204">
+												<object class="NSTableColumn" id="760856386">
 													<string key="NSIdentifier">application</string>
 													<double key="NSWidth">100</double>
 													<double key="NSMinWidth">10</double>
@@ -1016,7 +1016,7 @@
 															<double key="NSSize">11</double>
 															<int key="NSfFlags">3100</int>
 														</object>
-														<object class="NSColor" key="NSBackgroundColor" id="379644645">
+														<object class="NSColor" key="NSBackgroundColor" id="806358456">
 															<int key="NSColorSpace">6</int>
 															<string key="NSCatalogName">System</string>
 															<string key="NSColorName">headerColor</string>
@@ -1029,7 +1029,7 @@
 															<reference key="NSColor" ref="908989557"/>
 														</object>
 													</object>
-													<object class="NSTextFieldCell" key="NSDataCell" id="1050303763">
+													<object class="NSTextFieldCell" key="NSDataCell" id="243529758">
 														<int key="NSCellFlags">337641536</int>
 														<int key="NSCellFlags2">2048</int>
 														<string key="NSContents">Text Cell</string>
@@ -1048,7 +1048,7 @@
 													<bool key="NSIsEditable">YES</bool>
 													<reference key="NSTableView" ref="50152069"/>
 												</object>
-												<object class="NSTableColumn" id="1013543254">
+												<object class="NSTableColumn" id="536833905">
 													<string key="NSIdentifier">usedFile</string>
 													<double key="NSWidth">129</double>
 													<double key="NSMinWidth">10</double>
@@ -1058,10 +1058,10 @@
 														<int key="NSCellFlags2">2048</int>
 														<string key="NSContents">Used File</string>
 														<reference key="NSSupport" ref="26"/>
-														<reference key="NSBackgroundColor" ref="379644645"/>
+														<reference key="NSBackgroundColor" ref="806358456"/>
 														<reference key="NSTextColor" ref="921381230"/>
 													</object>
-													<object class="NSTextFieldCell" key="NSDataCell" id="700696299">
+													<object class="NSTextFieldCell" key="NSDataCell" id="1054216890">
 														<int key="NSCellFlags">337641536</int>
 														<int key="NSCellFlags2">2048</int>
 														<string key="NSContents">Text Cell</string>
@@ -1129,7 +1129,6 @@
 									<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 									<reference key="NSSuperview" ref="786466188"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									<int key="NSsFlags">1</int>
@@ -1185,8 +1184,11 @@
 			<object class="NSCustomObject" id="755631768">
 				<string key="NSClassName">NSFontManager</string>
 			</object>
-			<object class="NSCustomObject" id="886488360">
+			<object class="NSCustomObject" id="418451722">
 				<string key="NSClassName">UsedFilesTreeViewController</string>
+			</object>
+			<object class="NSCustomObject" id="715147269">
+				<string key="NSClassName">SearchFieldContoller</string>
 			</object>
 			<object class="NSMenuItem" id="302598603">
 				<string key="NSTitle">Format</string>
@@ -2515,33 +2517,41 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">usedFilesTreeViewController</string>
 						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="886488360"/>
+						<reference key="destination" ref="418451722"/>
 					</object>
 					<int key="connectionID">669</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
+						<string key="label">searchFieldController</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="715147269"/>
+					</object>
+					<int key="connectionID">672</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="50152069"/>
-						<reference key="destination" ref="886488360"/>
+						<reference key="destination" ref="418451722"/>
 					</object>
 					<int key="connectionID">662</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">TheTableView</string>
-						<reference key="source" ref="886488360"/>
+						<reference key="source" ref="418451722"/>
 						<reference key="destination" ref="50152069"/>
 					</object>
 					<int key="connectionID">660</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">SetFilter:</string>
-						<reference key="source" ref="886488360"/>
+						<string key="label">searchTextChanged:</string>
+						<reference key="source" ref="715147269"/>
 						<reference key="destination" ref="1000242706"/>
 					</object>
-					<int key="connectionID">661</int>
+					<int key="connectionID">671</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3383,8 +3393,8 @@
 						<int key="objectID">621</int>
 						<reference key="object" ref="50152069"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1013543254"/>
-							<reference ref="470483204"/>
+							<reference ref="536833905"/>
+							<reference ref="760856386"/>
 						</array>
 						<reference key="parent" ref="786466188"/>
 					</object>
@@ -3405,33 +3415,33 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">653</int>
-						<reference key="object" ref="1013543254"/>
+						<reference key="object" ref="536833905"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="700696299"/>
+							<reference ref="1054216890"/>
 						</array>
 						<reference key="parent" ref="50152069"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">654</int>
-						<reference key="object" ref="700696299"/>
-						<reference key="parent" ref="1013543254"/>
+						<reference key="object" ref="1054216890"/>
+						<reference key="parent" ref="536833905"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">655</int>
-						<reference key="object" ref="470483204"/>
+						<reference key="object" ref="760856386"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1050303763"/>
+							<reference ref="243529758"/>
 						</array>
 						<reference key="parent" ref="50152069"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">656</int>
-						<reference key="object" ref="1050303763"/>
-						<reference key="parent" ref="470483204"/>
+						<reference key="object" ref="243529758"/>
+						<reference key="parent" ref="760856386"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">659</int>
-						<reference key="object" ref="886488360"/>
+						<reference key="object" ref="418451722"/>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -3774,6 +3784,11 @@
 						<reference key="object" ref="738670835"/>
 						<reference key="parent" ref="963351320"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">670</int>
+						<reference key="object" ref="715147269"/>
+						<reference key="parent" ref="0"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -3956,6 +3971,7 @@
 				<string key="655.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="656.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="659.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="670.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="74.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3972,7 +3988,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">669</int>
+			<int key="maxID">672</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3981,6 +3997,7 @@
 					<string key="superclassName">NSObject</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="searchField">NSSearchField</string>
+						<string key="searchFieldController">SearchFieldContoller</string>
 						<string key="usedFilesTreeViewController">UsedFilesTreeViewController</string>
 						<string key="window">NSWindow</string>
 					</dictionary>
@@ -3988,6 +4005,10 @@
 						<object class="IBToOneOutletInfo" key="searchField">
 							<string key="name">searchField</string>
 							<string key="candidateClassName">NSSearchField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="searchFieldController">
+							<string key="name">searchFieldController</string>
+							<string key="candidateClassName">SearchFieldContoller</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="usedFilesTreeViewController">
 							<string key="name">usedFilesTreeViewController</string>
@@ -4053,19 +4074,27 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">UsedFilesTreeViewController</string>
+					<string key="className">SearchFieldContoller</string>
 					<string key="superclassName">NSObject</string>
 					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">SetFilter:</string>
+						<string key="NS.key.0">searchTextChanged:</string>
 						<string key="NS.object.0">id</string>
 					</object>
 					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">SetFilter:</string>
+						<string key="NS.key.0">searchTextChanged:</string>
 						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">SetFilter:</string>
+							<string key="name">searchTextChanged:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SearchFieldContoller.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UsedFilesTreeViewController</string>
+					<string key="superclassName">NSObject</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">TheTableView</string>
 						<string key="NS.object.0">NSTableView</string>
